# OpenEnv-Advision-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AdVision_Colab.ipynb  Dockerfile  README.md  deploy_hf.py  entrypoint.sh  inference.py  models.py  openenv.yaml  push_to_hf.py  pyproject.toml  requirements.txt  test_client.py
advision/: client.py
advision/agent/: baseline_agent.py
advision/env/: ad_placement_env.py  reward.py
advision_env/: __init__.py  client.py  openenv_wrapper.py
advision_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
advision_env/agent/: baseline_agent.py
advision_env/env/: ad_placement_env.py  reward.py
advision_env/models/: __init__.py  advision_models.py  vision_models.py
advision_env/openenv/: models.py  tasks.py
advision_env/pipeline/: placement_engine.py
data/: test.py
logs/: baseline_results.json
scripts/: generate_sample_assets.py
server/: advision_environment.py  app.py  ui.py  ui_utils.py
server/static/: script.js  style.css
server/templates/: index.html
tests/: test_advision_env.py
