[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advision"
version = "1.0.0"
description = "AdVision OpenEnv Environment"
dependencies = [
    "openenv-core",
    "openai",
    "pydantic",
    "pyyaml",
    "gymnasium",
    "ultralytics",
    "torch",
    "torchvision",
    "stable-baselines3",
    "opencv-python-headless",
    "matplotlib",
    "scipy",
    "Pillow",
    "python-dotenv",
    "gradio",
    "uvicorn",
    "fastapi",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["advision_env*"]

[project.scripts]
server = "server.app:main"
